# cmake-embed-python-demo

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: build.yaml
